--- a/zuul.d/project-templates.yaml
+++ b/zuul.d/project-templates.yaml
@@ -520,6 +520,13 @@
         - validate-buildsys-tags-yoga-testing-packstack-scenario001-centos8
         - validate-buildsys-tags-yoga-testing-packstack-scenario002-centos8
         - validate-buildsys-tags-yoga-testing-packstack-scenario003-centos8
+        - validate-buildsys-tags-yoga-testing-puppet-scenario001-centos9
+        - validate-buildsys-tags-yoga-testing-puppet-scenario002-centos9
+        - validate-buildsys-tags-yoga-testing-puppet-scenario003-centos9
+        - validate-buildsys-tags-yoga-testing-puppet-scenario004-centos9
+        - validate-buildsys-tags-yoga-testing-packstack-scenario001-centos9
+        - validate-buildsys-tags-yoga-testing-packstack-scenario002-centos9
+        - validate-buildsys-tags-yoga-testing-packstack-scenario003-centos9
 
 - project-template:
     name: periodic-centos-stream
