--- a/playbooks/base/pre.yaml
+++ b/playbooks/base/pre.yaml
@@ -21,3 +21,10 @@
         - ansible_connection != 'kubectl'
         - _worker_is_sudoer.rc == 0
         - ansible_distribution != "Fedora" or (ansible_distribution == "Fedora" and ansible_distribution_major_version|int > 28)
+
+    - name: Use CentOS compose (centos9) repo instead of centos repo
+      become: true
+      file:
+        path: /etc/yum.repos.d/centos.repo
+        state: absent
+      when: ansible_distribution_major_version is version(9, '==')
