--- a/playbooks/base/pre.yaml
+++ b/playbooks/base/pre.yaml
@@ -21,3 +21,8 @@
         - ansible_connection != 'kubectl'
         - _worker_is_sudoer.rc == 0
         - ansible_distribution != "Fedora" or (ansible_distribution == "Fedora" and ansible_distribution_major_version|int > 28)
+
+    - name: Use CentOS compose repo
+      become: true
+      command: rm -fr /etc/yum.repos.d/centos.repo
+      when: ansible_distribution_major_version is version(9, '==')
